--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "firebase-admin": "^10.0.0"
+    "firebase-admin": "^10.0.0",
+    "socket.io": "^4.3.1"
   }
 }
